--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -1,18 +1,18 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# FRENCH TRANSLATION.
+# Copyright (C) 2024 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# GYAN KARTHIK ABHISHEK SAKIBANDA <ABHISHEKSAKIBANDA@GMAIL.COM>, 2024.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-20 20:25-0400\n"
+"POT-Creation-Date: 2024-03-22 16:17-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: GYAN KARTHIK ABHISHEK SAKIBANDA <ABHISHEKSAKIBANDA@GMAIL.COM>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -133,35 +133,68 @@ msgstr "Anglais"
 msgid "French"
 msgstr ""
 
-#: .\userapp\templates\userapp\sign_in.html:47
+#: .\userapp\templates\userapp\forget_password.html:15
+#: .\userapp\templates\userapp\user_account.html:48
+msgid "Username"
+msgstr "Nom d'utilisateur"
+
+#: .\userapp\templates\userapp\forget_password.html:18
+msgid "Submit"
+msgstr "Submit"
+
+#: .\userapp\templates\userapp\password_reset_form.html:12
+#, fuzzy
+#| msgid "Password"
+msgid "Reset your Password"
+msgstr "Mot de passe"
+
+#: .\userapp\templates\userapp\password_reset_form.html:25
+#, fuzzy
+#| msgid "Password"
+msgid "Reset Password"
+msgstr "Mot de passe"
+
+#: .\userapp\templates\userapp\sign_in.html:38
 msgid "Enter the information you entered while registering."
 msgstr "Entrez les informations que vous avez fournies lors de l'inscription."
 
-#: .\userapp\templates\userapp\sign_in.html:67
-#: .\userapp\templates\userapp\sign_up.html:62
-msgid "Sign In"
-msgstr "Se connecter"
-
-#: .\userapp\templates\userapp\sign_in.html:70
-msgid "Don't have an account?"
-msgstr "Vous n'avez pas de compte ?"
-
-#: .\userapp\templates\userapp\sign_in.html:72
-#: .\userapp\templates\userapp\sign_up.html:59
-msgid "Sign Up"
-msgstr "S'inscrire"
-
-#: .\userapp\templates\userapp\sign_up.html:38
-msgid "It's Never too late<br>to Find Match"
-msgstr "Il n'est jamais trop tard pour trouver une correspondance"
-
+#: .\userapp\templates\userapp\sign_in.html:45
 #: .\userapp\templates\userapp\sign_up.html:49
 msgid "Login"
 msgstr "Nom d'utilisateur"
 
+#: .\userapp\templates\userapp\sign_in.html:48
 #: .\userapp\templates\userapp\sign_up.html:53
 msgid "Password"
 msgstr "Mot de passe"
+
+#: .\userapp\templates\userapp\sign_in.html:51
+#: .\userapp\templates\userapp\sign_up.html:62
+msgid "Sign In"
+msgstr "Se connecter"
+
+#: .\userapp\templates\userapp\sign_in.html:53
+msgid "Don't have an account?"
+msgstr "Vous n'avez pas de compte ?"
+
+#: .\userapp\templates\userapp\sign_in.html:53
+#: .\userapp\templates\userapp\sign_up.html:59
+msgid "Sign Up"
+msgstr "S'inscrire"
+
+#: .\userapp\templates\userapp\sign_in.html:54
+msgid "Don't remember your password?"
+msgstr "Vous ne vous souvenez plus de votre mot de passe?"
+
+#: .\userapp\templates\userapp\sign_in.html:54
+#, fuzzy
+#| msgid "Confirm Password"
+msgid "Forgot Password?"
+msgstr "Confirmer le mot de passe"
+
+#: .\userapp\templates\userapp\sign_up.html:38
+msgid "It's Never too late<br>to Find Match"
+msgstr "Il n'est jamais trop tard pour trouver une correspondance"
 
 #: .\userapp\templates\userapp\sign_up.html:56
 msgid "Confirm Password"
@@ -260,10 +293,6 @@ msgstr "Image"
 msgid "Information"
 msgstr "Informations"
 
-#: .\userapp\templates\userapp\user_account.html:48
-msgid "Username"
-msgstr "Nom d'utilisateur"
-
 #: .\userapp\templates\userapp\user_account.html:59
 msgid "Location"
 msgstr "Emplacement"
@@ -283,6 +312,9 @@ msgstr "À propos de moi"
 #: .\userapp\templates\userapp\user_account.html:97
 msgid "Save Changes"
 msgstr "Enregistrer les modifications"
+
+#~ msgid "Don't Remember Your Password?"
+#~ msgstr "Vous ne vous souvenez plus de votre mot de passe?"
 
 #~ msgid "Select a chat to start messaging"
 #~ msgstr "Sélectionnez un chat pour commencer à envoyer des messages"
